individual order details for user added

--- a/views/user/orderDetailsUser.ejs
+++ b/views/user/orderDetailsUser.ejs
@@ -7,12 +7,177 @@
 
 <section>
 
-   <h1>Order History</h1>
+
+    <section class="py-24 relative">
+        <div class="w-full max-w-7xl px-4 md:px-5 lg-6 mx-auto">
+            <div class="flex items-start flex-col gap-6 xl:flex-row ">
+                <div class="w-full max-w-sm md:max-w-3xl xl:max-w-sm flex items-start flex-col gap-8 max-xl:mx-auto">
+                    <div class="p-6 border border-gray-200 rounded-3xl w-full group transition-all duration-500 hover:border-gray-400 ">
+                        <h2
+                            class="font-manrope font-bold text-3xl leading-10 text-black pb-6 border-b border-gray-200 ">
+                            Order Summary
+                        </h2>
+                        <div class="data py-6 border-b border-gray-200">
+                            <div class="flex items-center justify-between gap-4 mb-5">
+                                <p class="font-normal text-lg leading-8 text-gray-400 transition-all duration-500 group-hover:text-gray-700">
+                                    Order Id</p>
+                                <p class="font-medium text-xs leading-8 text-gray-600"> <%= order.id %> </p>
+                            </div>
+                            <div class="flex items-center justify-between gap-4 mb-5">
+                                <p class="font-normal text-lg leading-8 text-gray-400 transition-all duration-500 group-hover:text-gray-700">
+                                    Address</p>
+                                <p class="text-xs leading-8 text-gray-900"><%= address.address %>, <%= address.city %> <br> <%= address.state %> ,<%= address.country %> </p>
+                            </div>
+                            <div class="flex items-center justify-between gap-4 mb-5">
+                                <p class="font-normal text-lg leading-8 text-gray-400 transition-all duration-500 group-hover:text-gray-700">
+                                    Payment Method</p>
+                                <p class="font-medium text-xs leading-8 text-gray-600"> <%= order.paymentMethod %> </p>
+                            </div>
+                            <div class="flex items-center justify-between gap-4 mb-5">
+                                <p class="font-normal text-lg leading-8 text-gray-400 transition-all duration-500 group-hover:text-gray-700">
+                                    Discount Price</p>
+                                <p class="font-medium text-xs leading-8 text-gray-600"> <%= order.discountPrice %>₹ </p>
+                            </div>
+                            <div class="flex items-center justify-between gap-4 mb-5">
+                                <p class="font-normal text-lg leading-8 text-gray-400 transition-all duration-500 group-hover:text-gray-700">
+                                    Order Status</p>
+                                <p class="font-medium text-xs leading-8 text-gray-600"> <%= order.status %> </p>
+                            </div>
+                        </div>
+                        <% if(order.status == "Cancelled") {%>
+                        <div class="total flex items-center justify-between pt-6">
+                            <button class="font-normal text-xl leading-8 text-black">Cancelled</button>
+                        </div>
+                        <% }else{ %>
+                        <div class="total flex items-center justify-between pt-6">
+                            <button id="cancelOrderUser" class="font-normal text-xl leading-8 text-black" value="<%= order.id %>">Cancel</button>
+                        </div>
+                        <% } %>
+                    </div>
+                </div>
+      
+                <div class="w-full max-w-sm md:max-w-3xl max-xl:mx-auto">
+                    <div class="grid grid-cols-1 gap-6">
+                        <% product.forEach(pro => { %>
+                        <div class="hover:bg-stone-200 rounded-2xl px-12 py-4 bg-gray-100 border border-gray-100 flex flex-col md:flex-row md:items-center gap-5 transition-all duration-500 hover:border-gray-400">
+                            <div class="img-box ">
+                                <img src="/product_images/<%= pro.productImage[0] %> " alt="Denim Jacket image" class="w-full md:max-w-[122px]">
+                            </div>
+                            <div class="grid grid-cols-1 md:grid-cols-2 w-full gap-3 md:gap-8">
+                                <div class="">
+                                    <h2 class="font-medium text-xl leading-8 text-black mb-3"> <%= pro.productName %> </h2>
+                                    <p class="font-normal text-md leading-8 text-gray-500 "><%= pro.brand %></p>
+                                    <p class="font-normal text-md leading-8 text-gray-500 "><%= pro.color    %></p>
+
+                                </div>
+                                <div class="flex items-center justify-between gap-8">
+                                    <div class="flex items-center gap-3">
+                                        <svg width="20" height="20"
+                                            viewBox="0 0 20 20" fill="none">
+                                            <g clip-path="url(#clip0_14099_1497)">
+                                                <path
+                                                    d="M9.10326 2.31699C9.47008 1.57374 10.5299 1.57374 10.8967 2.31699L12.7063 5.98347C12.8519 6.27862 13.1335 6.48319 13.4592 6.53051L17.5054 7.11846C18.3256 7.23765 18.6531 8.24562 18.0596 8.82416L15.1318 11.6781C14.8961 11.9079 14.7885 12.2389 14.8442 12.5632L15.5353 16.5931C15.6754 17.41 14.818 18.033 14.0844 17.6473L10.4653 15.7446C10.174 15.5915 9.82598 15.5915 9.53466 15.7446L5.91562 17.6473C5.18199 18.033 4.32456 17.41 4.46467 16.5931L5.15585 12.5632C5.21148 12.2389 5.10393 11.9079 4.86825 11.6781L1.94038 8.82416C1.34687 8.24562 1.67438 7.23765 2.4946 7.11846L6.54081 6.53051C6.86652 6.48319 7.14808 6.27862 7.29374 5.98347L9.10326 2.31699Z"
+                                                    fill="#" />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_14099_1497">
+                                                    <rect width="20" height="20" fill="white" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                        <svg width="20" height="20"
+                                            viewBox="0 0 20 20" fill="none">
+                                            <g clip-path="url(#clip0_14099_1497)">
+                                                <path
+                                                    d="M9.10326 2.31699C9.47008 1.57374 10.5299 1.57374 10.8967 2.31699L12.7063 5.98347C12.8519 6.27862 13.1335 6.48319 13.4592 6.53051L17.5054 7.11846C18.3256 7.23765 18.6531 8.24562 18.0596 8.82416L15.1318 11.6781C14.8961 11.9079 14.7885 12.2389 14.8442 12.5632L15.5353 16.5931C15.6754 17.41 14.818 18.033 14.0844 17.6473L10.4653 15.7446C10.174 15.5915 9.82598 15.5915 9.53466 15.7446L5.91562 17.6473C5.18199 18.033 4.32456 17.41 4.46467 16.5931L5.15585 12.5632C5.21148 12.2389 5.10393 11.9079 4.86825 11.6781L1.94038 8.82416C1.34687 8.24562 1.67438 7.23765 2.4946 7.11846L6.54081 6.53051C6.86652 6.48319 7.14808 6.27862 7.29374 5.98347L9.10326 2.31699Z"
+                                                    fill="#" />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_14099_1497">
+                                                    <rect width="20" height="20" fill="white" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                        <svg width="20" height="20"
+                                            viewBox="0 0 20 20" fill="none">
+                                            <g clip-path="url(#clip0_14099_1497)">
+                                                <path
+                                                    d="M9.10326 2.31699C9.47008 1.57374 10.5299 1.57374 10.8967 2.31699L12.7063 5.98347C12.8519 6.27862 13.1335 6.48319 13.4592 6.53051L17.5054 7.11846C18.3256 7.23765 18.6531 8.24562 18.0596 8.82416L15.1318 11.6781C14.8961 11.9079 14.7885 12.2389 14.8442 12.5632L15.5353 16.5931C15.6754 17.41 14.818 18.033 14.0844 17.6473L10.4653 15.7446C10.174 15.5915 9.82598 15.5915 9.53466 15.7446L5.91562 17.6473C5.18199 18.033 4.32456 17.41 4.46467 16.5931L5.15585 12.5632C5.21148 12.2389 5.10393 11.9079 4.86825 11.6781L1.94038 8.82416C1.34687 8.24562 1.67438 7.23765 2.4946 7.11846L6.54081 6.53051C6.86652 6.48319 7.14808 6.27862 7.29374 5.98347L9.10326 2.31699Z"
+                                                    fill="#" />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_14099_1497">
+                                                    <rect width="20" height="20" fill="white" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                        <svg width="20" height="20"
+                                            viewBox="0 0 20 20" fill="none">
+                                            <g clip-path="url(#clip0_14099_1497)">
+                                                <path
+                                                    d="M9.10326 2.31699C9.47008 1.57374 10.5299 1.57374 10.8967 2.31699L12.7063 5.98347C12.8519 6.27862 13.1335 6.48319 13.4592 6.53051L17.5054 7.11846C18.3256 7.23765 18.6531 8.24562 18.0596 8.82416L15.1318 11.6781C14.8961 11.9079 14.7885 12.2389 14.8442 12.5632L15.5353 16.5931C15.6754 17.41 14.818 18.033 14.0844 17.6473L10.4653 15.7446C10.174 15.5915 9.82598 15.5915 9.53466 15.7446L5.91562 17.6473C5.18199 18.033 4.32456 17.41 4.46467 16.5931L5.15585 12.5632C5.21148 12.2389 5.10393 11.9079 4.86825 11.6781L1.94038 8.82416C1.34687 8.24562 1.67438 7.23765 2.4946 7.11846L6.54081 6.53051C6.86652 6.48319 7.14808 6.27862 7.29374 5.98347L9.10326 2.31699Z"
+                                                    fill="#" />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_14099_1497">
+                                                    <rect width="20" height="20" fill="white" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                        <svg width="20" height="20"
+                                            viewBox="0 0 20 20" fill="none">
+                                            <g clip-path="url(#clip0_14099_1497)">
+                                                <path
+                                                    d="M9.10326 2.31699C9.47008 1.57374 10.5299 1.57374 10.8967 2.31699L12.7063 5.98347C12.8519 6.27862 13.1335 6.48319 13.4592 6.53051L17.5054 7.11846C18.3256 7.23765 18.6531 8.24562 18.0596 8.82416L15.1318 11.6781C14.8961 11.9079 14.7885 12.2389 14.8442 12.5632L15.5353 16.5931C15.6754 17.41 14.818 18.033 14.0844 17.6473L10.4653 15.7446C10.174 15.5915 9.82598 15.5915 9.53466 15.7446L5.91562 17.6473C5.18199 18.033 4.32456 17.41 4.46467 16.5931L5.15585 12.5632C5.21148 12.2389 5.10393 11.9079 4.86825 11.6781L1.94038 8.82416C1.34687 8.24562 1.67438 7.23765 2.4946 7.11846L6.54081 6.53051C6.86652 6.48319 7.14808 6.27862 7.29374 5.98347L9.10326 2.31699Z"
+                                                    fill="#" />
+                                            </g>
+                                            <defs>
+                                                <clipPath id="clip0_14099_1497">
+                                                    <rect width="20" height="20" fill="white" />
+                                                </clipPath>
+                                            </defs>
+                                        </svg>
+                                    </div>
+                                    <h6 class="font-medium text-md leading-8 text-indigo-600"><%= pro.price %>₹</h6>
+                                </div>
+                            </div>
+                        </div>
+
+                        <% }) %>
+
+                    </div>
+
+                    <p class="font-bold mt-5">Total : <span> <%= order.total %>₹ </span></p>
+                </div>
+               
+            </div>
+            
+        </div>
+    </section>                              
 
 </section>
 
 
 </main>
+<script>
+    const orderId = document.getElementById('cancelOrderUser').value;
+    const cancelOrderUserBtn = document.getElementById('cancelOrderUser');
+    cancelOrderUserBtn.addEventListener('click',() => {
+
+        fetch('/orderCancel', {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+                "orderId": orderId
+            })})
+            .then(() => {
+                  window.location.href = '/orderDetailsUser/' + orderId;
+                 })
+    })
+
+</script>
 
 <%- include('../partials/footer') %>
 
