--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -63,7 +63,7 @@
                                   <div class="text-left"> <%= orders[i].status %> </div>
                               </td>
                               <td class="pl-24 pt-5 whitespace-nowrap">
-                                  <div class="text-left"> <a href="/orderDetailsUser" value="<%= orders[i].id %>">/</a>  </div>
+                                  <div class="text-left"> <a href="/orderDetailsUser/<%= orders[i].id %>" value="<%= orders[i].id %>">/</a>  </div>
                               </td>
                           </tr>
                           <% } %>
