--- a/views/user/shopping.ejs
+++ b/views/user/shopping.ejs
@@ -6,6 +6,33 @@
         <span class="text-gray-900 michroma-regular">PRODUCTS</span>
         <hr class="w-96">
       </section>  
+  <section class="flex justify-end items-end">
+    <div class="relative">
+      <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-gray-950 h-9 w-44 rounded-full border border-gray-950 bg-gray-50  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
+        <span class="flex items-center font-thin">Sort items</span>
+        <svg class="w-2.5 h-2.5 mt-2 ml-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
+      </button>
+  
+   
+      <div id="dropdown" class="absolute right-0 z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-100 text-gray-950">
+        <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
+          <li>
+            <a href="/sortShopping/lowToHigh" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Price: low to high</a>
+          </li>
+          <li>
+            <a href="/sortShopping/HighToLow" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Price: high to low</a>
+          </li>
+          <li>
+            <a href="/sortShopping/aToZ" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Alphabetically, A-Z</a>
+          </li>
+          <li>
+            <a href="/sortShopping/zToa" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Alphabetically, Z-A</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
 
 <!-- Products -->
 <section class="ml-20">
@@ -14,70 +41,86 @@
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
                 <% products.forEach((product) => { %>
                 <div class="group relative ">
-
-
                     <div class=" aspect-h-1 h-[350px] sm:h-[400px] overflow-hidden group">
                         <img src="/product_images/<%= product.productImage[0] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-100 transition-opacity duration-500 group-hover:opacity-0" />
                         <img src="/product_images/<%= product.productImage[1] %>" alt="" class="absolute inset-0 w-full object-fill rounded-md h-88 opacity-0 transition-opacity duration-500 group-hover:opacity-100" />
                     </div>
-                    
-                    <div class="  justify ">
-                                <a href="/product/<%= product._id %>" class="font-bold">
-                                    <%= product.productName %>
+                       <div>
+                           <a href="/product/<%= product._id %>" class="font-bold">
+                                     <%= product.productName %>
                                 </a>
                             <p class="mt-1 text-sm text-gray-500"><%= product.color %></p>
-                   
                             <% if(product.offer && product.offer[0] && product.offer[0].offerPrice) { %>
                                 <h1 class="text-1xl font-medium line-through">₹<%- product.price %>.00</h1>
                                 <h1 class="text-1xl font-medium">₹<%- product.offer[0].offerPrice %>.00</h1>
                               <% } else { %>
                                 <h1 class="text-1xl font-medium">₹<%- product.price %>.00</h1>
                               <% } %>
+                         </div>
                     </div>
-                </div>
                 <% }) %>
-      
             </div>
         </div>
     </div>
 </section>
 
-<section>
-    <!-- component -->
-<div class="flex items-center justify-center py-10 lg:px-0 sm:px-6 px-4">
-    <!--- more free and premium Tailwind CSS components at https://tailwinduikit.com/ --->
+
+<section class="text-center w-full sm:w-3/4 mx-auto border-t flex justify-center py-6   ">
+    <% if (currentPage > 1) { %>
+        <a href="?page=<%= currentPage - 1 %>" class="px-2 font-sans hover:text-sky-600"> &lt; </a>
+    <% } %>
     
-            <div class="lg:w-3/5 w-full  flex items-center justify-between border-t border-gray-200">
-                <div class="flex items-center pt-3 text-gray-600 hover:text-indigo-700 cursor-pointer">
-                    <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1.1665 4H12.8332" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M1.1665 4L4.49984 7.33333" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M1.1665 4.00002L4.49984 0.666687" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        <p class="text-sm ml-3 font-medium leading-none ">Previous</p>                    
-                </div>
-                <div class="sm:flex hidden">
-                    <p class="text-sm font-medium leading-none cursor-pointer text-gray-600 hover:text-indigo-700 border-t border-transparent hover:border-indigo-400 pt-3 mr-4 px-2">1</p>
-                    <p class="text-sm font-medium leading-none cursor-pointer text-gray-600 hover:text-indigo-700 border-t border-transparent hover:border-indigo-400 pt-3 mr-4 px-2">2</p>
-                    <p class="text-sm font-medium leading-none cursor-pointer text-gray-600 hover:text-indigo-700 border-t border-transparent hover:border-indigo-400 pt-3 mr-4 px-2">3</p>
-                    <p class="text-sm font-medium leading-none cursor-pointer text-indigo-700 border-t border-indigo-400 pt-3 mr-4 px-2">4</p>
-                    <p class="text-sm font-medium leading-none cursor-pointer text-gray-600 hover:text-indigo-700 border-t border-transparent hover:border-indigo-400 pt-3 mr-4 px-2">5</p>
-                    <p class="text-sm font-medium leading-none cursor-pointer text-gray-600 hover:text-indigo-700 border-t border-transparent hover:border-indigo-400 pt-3 mr-4 px-2">6</p>
-                    <p class="text-sm font-medium leading-none cursor-pointer text-gray-600 hover:text-indigo-700 border-t border-transparent hover:border-indigo-400 pt-3 mr-4 px-2">7</p>
-                    <p class="text-sm font-medium leading-none cursor-pointer text-gray-600 hover:text-indigo-700 border-t border-transparent hover:border-indigo-400 pt-3 mr-4 px-2">8</p>
-                </div>
-                <div class="flex items-center pt-3 text-gray-600 hover:text-indigo-700 cursor-pointer">
-                    <p class="text-sm font-medium leading-none mr-3">Next</p>
-                    <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1.1665 4H12.8332" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M9.5 7.33333L12.8333 4" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M9.5 0.666687L12.8333 4.00002" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                </div>
-            </div>
-        </div>
+    <% for (let i = 1; i <= totalPage; i++) { %>
+        <a href="?page=<%= i %>" class="px-2 font-sans hover:text-sky-600 <%= i === currentPage ? 'text-sky-600' : '' %>"> <%= i %> </a>
+    <% } %>
+    
+    <% if (currentPage < totalPage) { %>
+        <a href="?page=<%= parseInt(currentPage) + 1 %>" class="px-2 font-sans hover:text-sky-600"> &gt; </a>
+    <% } %>
 </section>
 
+
+
+
 </main>
+<script>
+    // const countriesSelect = document.getElementById('countries');
+    // countriesSelect.addEventListener('change', () => {
+    //     const selectedOption = countriesSelect.value;
+    //     fetch('/sortProduct',{
+    //                     method:"POST",
+    //                     headers:{
+    //                         "Content-Type" : "application/json"
+    //                     },
+    //                     body:JSON.stringify({
+    //                         sortOption : selectedOption
+    //                       })
+    //       })
+    // });
+
+    const selectElement = document.getElementById('countries');
+
+selectElement.addEventListener('change', () => {
+    const selectedOption = selectElement.options[selectElement.selectedIndex];
+    const sorting = selectedOption.value;
+    fetch('/sortShopping',{
+                        method:"POST",
+                        headers:{
+                            "Content-Type" : "application/json"
+                        },
+                        body:JSON.stringify({
+                         sort: sorting
+                 })
+         })
+});
+
+
+function toggleDropdown() {
+      var dropdown = document.getElementById('dropdown');
+      dropdown.classList.toggle('hidden');
+    }
+</script>
+
+
 
 <%- include('../partials/footer') %>
