advanced sort for shopping page finished

--- a/views/user/shopping.ejs
+++ b/views/user/shopping.ejs
@@ -20,13 +20,13 @@
             <a href="/sortShopping/lowToHigh" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Price: low to high</a>
           </li>
           <li>
-            <a href="/sortShopping/HighToLow" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Price: high to low</a>
+            <a href="/sortShopping/highToLow" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Price: high to low</a>
           </li>
           <li>
             <a href="/sortShopping/aToZ" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Alphabetically, A-Z</a>
           </li>
           <li>
-            <a href="/sortShopping/zToa" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Alphabetically, Z-A</a>
+            <a href="/sortShopping/zToA" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Alphabetically, Z-A</a>
           </li>
         </ul>
       </div>
