--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -1,11 +1,11 @@
 <%- include('../partials/adminHeader') %>
 
 <main>
-
+<!-- 
 <section class="justify-start">
 
-    
-<form class="mx-end w-36 h-8">
+   clear all of its junks -->
+<!-- <form class="mx-end w-36 h-8">
     <select id="orderSort" class="border border-gray-300 text-blue-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-100 dark:border-gray-600 dark:placeholder-gray-100 dark:text-gray-900 dark:focus:ring-blue-500 dark:focus:border-blue-500">
  
       <option value="recentlyAdded">Recently added</option>
@@ -14,7 +14,30 @@
     </select>
   </form>
   
-</section>
+</section> -->
+
+<section class="flex justify-end items-end">
+    <div class="relative">
+      <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-gray-950 h-9 w-44 rounded-full border border-gray-950 bg-gray-50  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
+        <span class="flex items-center font-thin">Sort items</span>
+        <svg class="w-2.5 h-2.5 mt-2 ml-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
+      </button>
+  
+      <div id="dropdown" class="absolute right-0 z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-100 text-gray-950">
+        <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
+          <li>
+            <a href="/admin/sortOrderAdmin/recentOrders" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Recently added</a>
+          </li>
+          <li>
+            <a href="/admin/sortOrderAdmin/olderOrders" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Older orders</a>
+          </li>
+          <li>
+            <a href="/admin/sortOrderAdmin/deleveredOrders" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Delivered</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
   <div class="relative overflow-x-auto shadow-md sm:rounded-lg mt-5">
     <div class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white">
@@ -133,9 +156,32 @@
         </tbody>
     </table>
 
+
+  
+
+    <section class="text-center w-full sm:w-3/4 mx-auto border-t flex justify-center py-6   ">
+        <% if (currentPage > 1) { %>
+            <a href="?page=<%= currentPage - 1 %>" class="px-2 font-sans hover:text-sky-600"> &lt; </a>
+        <% } %>
+        
+        <% for (let i = 1; i <= totalPage; i++) { %>
+            <a href="?page=<%= i %>" class="px-2 font-sans hover:text-sky-600 <%= i === currentPage ? 'text-sky-600' : '' %>"> <%= i %> </a>
+        <% } %>
+        
+        <% if (currentPage < totalPage) { %>
+            <a href="?page=<%= parseInt(currentPage) + 1 %>" class="px-2 font-sans hover:text-sky-600"> &gt; </a>
+        <% } %>
+    </section>
+
 </div>
   
 </main>
+<script>
+    function toggleDropdown() {
+        var dropdown = document.getElementById('dropdown');
+        dropdown.classList.toggle('hidden');
+      }
+</script>
 <script>
 
     const orderStatusChangeButtons = document.querySelectorAll('.orderStatusChangeButton');
@@ -156,6 +202,7 @@
               orderId : orderId
             })
        }).then(response => {
+        window.location.href = '/admin/orderManagement'
     if (response.ok) {
         return response.json()}
             throw new Error('Network response was not ok.');
