--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -12,6 +12,28 @@
           <header class="px-5 py-4 border-b border-gray-100">
               <h2 class="font-semibold text-gray-800">Orders</h2>
           </header>
+
+          <section class="flex justify-end items-end">
+            <div class="relative">
+              <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-gray-950 h-9 w-44 rounded-full border border-gray-950 bg-gray-50  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
+                <span class="flex items-center font-thin">Sort items</span>
+                <svg class="w-2.5 h-2.5 mt-2 ml-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
+              </button>
+          
+           
+              <div id="dropdown" class="absolute right-0 z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-100 text-gray-950">
+                <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
+                  <li>
+                    <a href="/sortOrdersUser/recentOrders" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Recently added</a>
+                  </li>
+                  <li>
+                    <a href="/sortOrdersUser/olderOrders" class="block px-4 py-2 text-gray-950 font-thin hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" >Older orders</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
+
           <div class="p-3">
               <div class="overflow-x-auto">
                   <table class="table-auto w-full">
@@ -75,5 +97,11 @@
   </div>
 </section>
 </main>
+<script>
+    function toggleDropdown() {
+        var dropdown = document.getElementById('dropdown');
+        dropdown.classList.toggle('hidden');
+      }
+</script>
 
 <%- include('../partials/footer') %>
