--- a/views/user/product.ejs
+++ b/views/user/product.ejs
@@ -33,7 +33,6 @@
                     <img id="img-container" class="h-full w-full max-w-full object-cover" src="/product_images/<%- datas[0].productImage[0] %>" alt="big" />
                   </div>
                 </div>
-      
                 <div class="mt-2 w-full lg:order-1 lg:w-32 lg:flex-shrink-0">
                   <div class="flex flex-row items-start lg:flex-col">
                     <button type="button" class="flex-0 aspect-square mb-3 h-20 overflow-hidden rounded-lg border-2 border-gray-900 text-center">
@@ -94,8 +93,7 @@
        <% } else { %>
          <h1 class="text-1xl font-medium">₹<%- datas[0].price %>.00</h1>
        <% } %>
-       
-        
+
               <ul class="mt-8 space-y-2">
                 <li class="flex items-center text-left text-sm font-medium text-gray-600">
                   <svg class="mr-2 block h-5 w-5 align-middle text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -125,12 +123,12 @@
             <span class="text-xs">Add to cart</span>
           </button>
 
-          <!-- <button type="button" onclick="toWishlist('<%= datas[0]._id %>','<%= datas[1] %>')" class="inline-flex items-center justify-center rounded-md border-2 border-transparent bg-gray-900 bg-none text-center text-base font-bold text-white transition-all duration-200 ease-in-out focus:shadow hover:bg-gray-800 h-10 w-36">
+          <button type="button" onclick="addTowishlistWithQuantity('<%= datas[0]._id %>','<%= datas[1] %>')" class="inline-flex items-center justify-center rounded-md border-2 border-transparent bg-gray-900 bg-none text-center text-base font-bold text-white transition-all duration-200 ease-in-out focus:shadow hover:bg-gray-800 h-10 w-36">
             <svg xmlns="http://www.w3.org/2000/svg" class="shrink-0 mr-3 h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
               <path stroke-linecap="round" stroke-linejoin="round" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
                  </svg>
              <span class="text-xs">Add to wishlist</span>
-           </button> -->
+           </button>
         </div>
       </div>  
          <div class="lg:col-span-3 mt-56">
@@ -150,8 +148,6 @@
           </div>
         </div>
       </section>
-
-
 
       <section class="mt-24">
         <div class="text-center">
@@ -188,34 +184,7 @@
 </section>
 
    <script>
- 
-
       //<------------ to cart page -------------->
-const toCart = (productId, userId, quantity) => {
-    const data = {
-        productId: productId,
-        userId: userId,
-        quantity: parseInt(quantity)
-    };
-
-    fetch('/addTocart', {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(data)
-    })
-    .then(response => {
-        if (!response.ok) {
-            throw new Error('Network response was not ok');
-        }else{
-          window.location.href = `/cart`
-        }
-       
-       
-    })
-};
-
 const addToCartWithQuantity = (productId, userId) => {
     const quantitySelect = document.getElementById('quantitySelect');
     const selectedQuantity = parseInt(quantitySelect.value);
@@ -248,6 +217,50 @@ const addToCartWithQuantity = (productId, userId) => {
                     text: data.message
                 }).then(() => {
                     window.location.href = `/cart`;
+                });
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+        });
+    } else {
+        console.log('Invalid quantity selected');
+    }
+};
+
+   //<------------ to wishlist page -------------->
+const addTowishlistWithQuantity = (productId, userId) => {
+    const quantitySelect = document.getElementById('quantitySelect');
+    const selectedQuantity = parseInt(quantitySelect.value);
+    if (!isNaN(selectedQuantity)) { 
+        fetch(`/addToWishlist`, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                productId: productId,
+                userId: userId,
+                quantity: selectedQuantity
+            })
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.error) {
+                // Display error SweetAlert
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: data.error
+                });
+            } else {
+                // Display success SweetAlert
+                Swal.fire({
+                    icon: 'success',
+                    title: 'Success!',
+                    text: data.message
+                }).then(() => {
+                    window.location.href = `/wishlist`;
                 });
             }
         })
